Updated CA functionality
